--- a/Frontend/pages/Admin/payments.html
+++ b/Frontend/pages/Admin/payments.html
@@ -14,51 +14,224 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <style>
+      :root {
+        --primary-blue: #1a73e8;
+        --secondary-blue: #4285f4;
+        --success-green: #34a853;
+        --warning-red: #ea4335;
+        --light-gray: #f8f9fa;
+        --border-color: #e0e0e0;
+        --text-primary: #202124;
+        --text-secondary: #5f6368;
+      }
+
       body {
-        background-color: #1a1a1a; /* Dark background */
-        color: #e0e0e0; /* Light text color */
-        font-family: Arial, sans-serif;
-        overflow-x: hidden;
-        position: relative;
+        background-color: #ffffff;
+        color: var(--text-primary);
+        font-family: "Segoe UI", Roboto, Arial, sans-serif;
+        line-height: 1.6;
       }
+
       .navbar {
-        background-color: #1c1c1c; /* Dark navbar background */
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+        background-color: #ffffff;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        padding: 0.8rem 0;
       }
+
       .navbar-brand {
-        color: #f0f0f0 !important;
+        color: var(--primary-blue) !important;
+        font-weight: 600;
       }
+
       .h5 {
-        color: #f0f0f0 !important;
+        color: var(--text-primary) !important;
+        font-weight: 600;
       }
+
       .alert {
-        background-color: rgba(
-          13,
-          110,
-          253,
-          0.1
-        ); /* Light blue background with transparency */
-        color: #8bb4e1; /* Light blue text color */
-        border: 1px solid rgba(13, 110, 253, 0.2);
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        backdrop-filter: blur(5px);
+        background-color: rgba(26, 115, 232, 0.1);
+        color: var(--primary-blue);
+        border: 1px solid rgba(26, 115, 232, 0.2);
+        border-radius: 8px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
       }
+
       .btn-outline-danger {
-        color: #dc3545;
-        border-color: #dc3545;
+        color: var(--warning-red);
+        border-color: var(--warning-red);
       }
+
       .btn-outline-danger:hover {
-        background-color: #dc3545;
+        background-color: var(--warning-red);
         color: #fff;
       }
 
-      /* Particle Network Background */
+      .card {
+        border: 1px solid var(--border-color);
+        border-radius: 12px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+
+      .card:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      }
+
+      .card-header {
+        background-color: #fff;
+        border-bottom: 1px solid var(--border-color);
+        font-weight: 600;
+      }
+
+      .form-control,
+      .form-select {
+        border: 1px solid var(--border-color);
+        border-radius: 6px;
+        padding: 0.6rem 0.75rem;
+      }
+
+      .form-control:focus,
+      .form-select:focus {
+        border-color: var(--primary-blue);
+        box-shadow: 0 0 0 0.25rem rgba(26, 115, 232, 0.15);
+      }
+
+      .table {
+        border-radius: 8px;
+        overflow: hidden;
+      }
+
+      .table-dark {
+        --bs-table-bg: #fff;
+        --bs-table-color: var(--text-primary);
+        --bs-table-border-color: var(--border-color);
+      }
+
+      .table thead th {
+        background-color: var(--primary-blue);
+        color: white;
+        font-weight: 500;
+        border: none;
+        padding: 1rem 0.75rem;
+      }
+
+      .table tbody td {
+        padding: 1rem 0.75rem;
+        vertical-align: middle;
+        border-bottom: 1px solid var(--border-color);
+      }
+
+      .table-hover tbody tr:hover {
+        background-color: rgba(26, 115, 232, 0.04);
+      }
+
+      .table-striped > tbody > tr:nth-of-type(odd) {
+        --bs-table-accent-bg: rgba(0, 0, 0, 0.02);
+      }
+
+      .badge {
+        padding: 0.5rem 0.75rem;
+        border-radius: 20px;
+        font-weight: 500;
+      }
+
+      .badge-success {
+        background-color: rgba(52, 168, 83, 0.15);
+        color: var(--success-green);
+      }
+
+      .badge-warning {
+        background-color: rgba(234, 67, 53, 0.15);
+        color: var(--warning-red);
+      }
+
+      .badge-info {
+        background-color: rgba(26, 115, 232, 0.15);
+        color: var(--primary-blue);
+      }
+
+      .pagination .page-link {
+        color: var(--primary-blue);
+        border: 1px solid var(--border-color);
+      }
+
+      .pagination .page-item.active .page-link {
+        background-color: var(--primary-blue);
+        border-color: var(--primary-blue);
+      }
+
+      .modal-content {
+        border: none;
+        border-radius: 12px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      }
+
+      .modal-header {
+        border-bottom: 1px solid var(--border-color);
+        padding: 1.25rem;
+      }
+
+      .modal-footer {
+        border-top: 1px solid var(--border-color);
+        padding: 1.25rem;
+      }
+
       #p5-canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
+        display: none;
+      }
+
+      .stat-card {
+        text-align: center;
+        padding: 1.5rem 1rem;
+      }
+
+      .stat-card i {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
+
+      .stat-card .card-title {
+        font-size: 0.95rem;
+        color: var(--text-secondary);
+        margin-bottom: 0.5rem;
+      }
+
+      .stat-card h3 {
+        font-weight: 600;
+        margin-bottom: 0;
+      }
+
+      .text-success {
+        color: var(--success-green) !important;
+      }
+
+      .text-info {
+        color: var(--secondary-blue) !important;
+      }
+
+      .text-warning {
+        color: #f57c00 !important;
+      }
+
+      .btn-primary {
+        background-color: var(--primary-blue);
+        border-color: var(--primary-blue);
+      }
+
+      .btn-primary:hover {
+        background-color: #0d62d0;
+        border-color: #0d62d0;
+      }
+
+      .btn-outline-success {
+        color: var(--success-green);
+        border-color: var(--success-green);
+      }
+
+      .btn-outline-success:hover {
+        background-color: var(--success-green);
+        color: white;
       }
     </style>
   </head>
@@ -67,107 +240,196 @@
 
     <nav class="navbar navbar-expand-lg navbar-light mb-4">
       <div class="container-fluid">
-        <a
-          class="navbar-brand fw-bold text-primary"
-          href="./admin-dashboard.html"
-        >
+        <a class="navbar-brand fw-bold" href="./admin-dashboard.html">
           <i class="fas fa-arrow-left me-2"></i>Back to Dashboard
         </a>
         <h2 class="h5 mb-0">Payment Details</h2>
-        <button id="logoutBtn" class="btn btn-outline-danger">
-          <i class="fas fa-sign-out-alt me-2"></i>Logout
-        </button>
       </div>
     </nav>
+
     <div class="container mt-5">
-      <div class="alert alert-info text-center">
-        This page will display payment history and analytics.
-        <br />
-        <i class="fas fa-chart-bar fa-2x mt-3"></i>
+      <!-- Payment Statistics Cards -->
+      <div class="row mb-4">
+        <div class="col-md-3">
+          <div class="card border-0">
+            <div class="stat-card">
+              <i class="fas fa-dollar-sign text-success"></i>
+              <h5 class="card-title">Total Revenue</h5>
+              <h3 id="totalRevenue" class="text-success">LKR 0.00</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card border-0">
+            <div class="stat-card">
+              <i class="fas fa-receipt text-info"></i>
+              <h5 class="card-title">Total Payments</h5>
+              <h3 id="totalPayments" class="text-info">0</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card border-0">
+            <div class="stat-card">
+              <i class="fas fa-check-circle text-success"></i>
+              <h5 class="card-title">Completed</h5>
+              <h3 id="completedPayments" class="text-success">0</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card border-0">
+            <div class="stat-card">
+              <i class="fas fa-clock text-warning"></i>
+              <h5 class="card-title">This Month</h5>
+              <h3 id="monthlyRevenue" class="text-warning">LKR 0.00</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Payment Filters -->
+      <div class="card mb-4 border-0">
+        <div class="card-header bg-white">
+          <h5 class="mb-0">
+            <i class="fas fa-filter me-2"></i>Payment Filters
+          </h5>
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-3">
+              <label class="form-label">Status Filter</label>
+              <select id="statusFilter" class="form-select">
+                <option value="">All Statuses</option>
+                <option value="COMPLETED">Completed</option>
+                <option value="PENDING">Pending</option>
+                <option value="FAILED">Failed</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <label class="form-label">Date From</label>
+              <input type="date" id="dateFrom" class="form-control" />
+            </div>
+            <div class="col-md-3">
+              <label class="form-label">Date To</label>
+              <input type="date" id="dateTo" class="form-control" />
+            </div>
+            <div class="col-md-3">
+              <label class="form-label">&nbsp;</label>
+              <div>
+                <button id="applyFilters" class="btn btn-primary me-2">
+                  <i class="fas fa-search me-1"></i>Apply
+                </button>
+                <button id="clearFilters" class="btn btn-outline-secondary">
+                  <i class="fas fa-times me-1"></i>Clear
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Payment History Table -->
+      <div class="card border-0">
+        <div
+          class="card-header bg-white d-flex justify-content-between align-items-center"
+        >
+          <h5 class="mb-0">
+            <i class="fas fa-history me-2"></i>Payment History
+          </h5>
+          <button id="exportPayments" class="btn btn-outline-success">
+            <i class="fas fa-download me-1"></i>Export CSV
+          </button>
+        </div>
+        <div class="card-body">
+          <!-- Loading Spinner -->
+          <div id="loadingSpinner" class="text-center py-5">
+            <div class="spinner-border text-primary" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <p class="mt-2">Loading payment data...</p>
+          </div>
+
+          <!-- Payment Table -->
+          <div
+            id="paymentTableContainer"
+            class="table-responsive"
+            style="display: none"
+          >
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Payer</th>
+                  <th>Amount</th>
+                  <th>Method</th>
+                  <th>Status</th>
+                  <th>Date</th>
+                  <th>Transaction ID</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody id="paymentTableBody">
+                <!-- Payment rows will be populated here -->
+              </tbody>
+            </table>
+          </div>
+
+          <!-- No Data Message -->
+          <div
+            id="noDataMessage"
+            class="text-center py-5"
+            style="display: none"
+          >
+            <i class="fas fa-inbox fa-3x text-muted mb-3"></i>
+            <h5 class="text-muted">No payment data found</h5>
+            <p class="text-muted">
+              There are no payments matching your criteria.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pagination -->
+      <nav aria-label="Payment pagination" class="mt-4">
+        <ul id="pagination" class="pagination justify-content-center">
+          <!-- Pagination will be populated here -->
+        </ul>
+      </nav>
+    </div>
+
+    <!-- Payment Details Modal -->
+    <div class="modal fade" id="paymentModal" tabindex="-1">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Payment Details</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+          <div class="modal-body" id="paymentModalBody">
+            <!-- Payment details will be populated here -->
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
-
-    <script>
-      let particles = [];
-      const numParticles = 100;
-      const connectionDistance = 150;
-
-      function setup() {
-        let canvas = createCanvas(windowWidth, windowHeight);
-        canvas.id("p5-canvas");
-        canvas.style("display", "block");
-        canvas.style("position", "fixed");
-        canvas.style("top", "0");
-        canvas.style("left", "0");
-        canvas.style("z-index", "-1");
-
-        for (let i = 0; i < numParticles; i++) {
-          particles.push(new Particle());
-        }
-      }
-
-      function draw() {
-        background("#1a1a1a");
-        for (let i = 0; i < particles.length; i++) {
-          particles[i].update();
-          particles[i].show();
-          for (let j = i + 1; j < particles.length; j++) {
-            let d = dist(
-              particles[i].x,
-              particles[i].y,
-              particles[j].x,
-              particles[j].y
-            );
-            if (d < connectionDistance) {
-              let alpha = map(d, 0, connectionDistance, 40, 0);
-              stroke(255, 255, 255, alpha);
-              strokeWeight(0.5);
-              line(
-                particles[i].x,
-                particles[i].y,
-                particles[j].x,
-                particles[j].y
-              );
-            }
-          }
-        }
-      }
-
-      class Particle {
-        constructor() {
-          this.x = random(width);
-          this.y = random(height);
-          this.vx = random(-0.5, 0.5);
-          this.vy = random(-0.5, 0.5);
-          this.r = random(1, 3);
-          this.color = 255;
-        }
-
-        update() {
-          this.x += this.vx;
-          this.y += this.vy;
-
-          if (this.x < 0 || this.x > width) {
-            this.vx *= -1;
-          }
-          if (this.y < 0 || this.y > height) {
-            this.vy *= -1;
-          }
-        }
-
-        show() {
-          noStroke();
-          fill(this.color);
-          ellipse(this.x, this.y, this.r * 2);
-        }
-      }
-
-      function windowResized() {
-        resizeCanvas(windowWidth, windowHeight);
-      }
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/Frontend/JavaScript/Admin/payments.js"></script>
   </body>
 </html>
