--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -191,7 +191,7 @@
                   accept="image/*"
                 />
                 <!-- Image Preview Container -->
-                <div id="imagePreview" class="mt-2" style="display: none;">
+                <div id="imagePreview" class="mt-2" style="display: none">
                   <img
                     id="previewImg"
                     src=""
@@ -224,14 +224,24 @@
                   >
                   <select class="form-select" id="articleCategory">
                     <option value="" selected>Select a category</option>
-                    <option value="technology-gadgets">Technology & Gadgets</option>
+                    <option value="technology-gadgets">
+                      Technology & Gadgets
+                    </option>
                     <option value="health-wellness">Health & Wellness</option>
                     <option value="finance-money">Finance & Money</option>
-                    <option value="education-learning">Education & Learning</option>
+                    <option value="education-learning">
+                      Education & Learning
+                    </option>
                     <option value="travel-adventure">Travel & Adventure</option>
-                    <option value="lifestyle-personal-development">Lifestyle & Personal Development</option>
-                    <option value="entertainment-media">Entertainment & Media</option>
-                    <option value="business-marketing">Business & Marketing</option>
+                    <option value="lifestyle-personal-development">
+                      Lifestyle & Personal Development
+                    </option>
+                    <option value="entertainment-media">
+                      Entertainment & Media
+                    </option>
+                    <option value="business-marketing">
+                      Business & Marketing
+                    </option>
                   </select>
                 </div>
                 <div class="col-md-6 mb-3">
@@ -312,7 +322,7 @@
                   accept="image/*"
                 />
                 <!-- Image Preview Container for Edit Modal -->
-                <div id="editImagePreview" class="mt-2" style="display: none;">
+                <div id="editImagePreview" class="mt-2" style="display: none">
                   <img
                     id="editPreviewImg"
                     src=""
@@ -347,14 +357,25 @@
                   >
                   <select class="form-select" id="editArticleCategory">
                     <option value="" selected>Select a category</option>
-                    <option value="technology-gadgets">Technology & Gadgets</option>
+                    <option value="technology-gadgets">
+                      Technology & Gadgets
+                    </option>
                     <option value="health-wellness">Health & Wellness</option>
                     <option value="finance-money">Finance & Money</option>
-                    <option value="education-learning">Education & Learning</option>
+                    <option value="education-learning">
+                      Education & Learning
+                    </option>
                     <option value="travel-adventure">Travel & Adventure</option>
-                    <option value="lifestyle-personal-development">Lifestyle & Personal Development</option>
-                    <option value="entertainment-media">Entertainment & Media</option>
-                    <option value="business-marketing">Business & Marketing</option>
+                    <option value="lifestyle-personal-development">
+                      Lifestyle & Personal Development
+                    </option>
+                    <option value="entertainment-media">
+                      Entertainment & Media
+                    </option>
+                    <option value="business-marketing">
+                      Business & Marketing
+                    </option>
+                    <option value="Animels-and-pets">Animals & Pets"></option>
                   </select>
                 </div>
                 <div class="col-md-6 mb-3">
